# model/system/lyadmin_users.go
@@ -23,9 +23,12 @@ type LyadminUsers struct {
 	Email       string `json:"email"  gorm:"type:varchar(100);comment:邮箱"`
 	Avatar      string `json:"avatar" gorm:"type:varchar(255);comment:头像"`
 	Gender      string `json:"gender" gorm:"type:varchar(10);comment:性别"`
+	DeptId      int    `json:"dept_id" gorm:"size:20;comment:部门"`
+	PostId      int    `json:"post_id" gorm:"size:20;comment:岗位"`
+	RoleId      int    `json:"role_id" gorm:"size:20;comment:角色ID"`
 	IsStaff     bool   `json:"is_staff" gorm:"size:4;default:true;comment:是否可登录后台"`
 	IsSuperuser bool   `json:"is_superuser" gorm:"size:4;default:false;comment:是否超管"`
-	IsActive    bool   `json:"is_active" gorm:"size:4;default:true;comment:状态"`
+	IsActive    bool   `json:"is_active" gorm:"size:4;default:true;comment:状态(1正常、2冻结)"`
 	Identity    int    `json:"identity" gorm:"size:4;default:1;comment:身份(1后台、2前台)"` //1后台用户、2前台用户
 }
 
