# model/system/request/lyadmin_operation_log.go
@@ -1,0 +1,11 @@
+package request
+
+import (
+	"gitee.com/lybbn/go-vue-lyadmin/model/system"
+	"gitee.com/lybbn/go-vue-lyadmin/utils/response"
+)
+
+type LyadminOperationLogSearch struct {
+	system.LyadminOperationLog
+	response.StructPageQueryParams
+}
